[Delivers #182129020] Fix view on narrow devices

--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@ header {
 }
 
 nav {
+  font-family: Tahoma, "Helvetica Neue", Helvetica, Arial, sans-serif;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -168,16 +169,52 @@ nav a:hover {
 /* End of styling for the Home Page
 CSS Styling for Lakes/Rivers page */
 
+.back-to-top {
+  margin: 10px;
+  text-align: center;
+}
+
+.lakes-rivers-link-offset {
+  visibility: hidden;
+  position: relative;
+  top: -200px;
+}
+
+#main-lakes-rivers h1 {
+  font-family: Tahoma, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+#main-lakes-rivers h1 a {
+  color: #c27e00;
+  text-shadow: 1px 1px 2px #000;
+}
+
+#main-lakes-rivers h1 a:hover {
+  color: #4abdff;
+
+}
+
+#main-lakes-rivers a {
+  color: #c27e00;
+  text-decoration: none;
+}
+
+#main-lakes-rivers a:hover {
+  color: #338cbf;
+
+}
+
 .lake-river-list {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   margin: auto;
-  width: 60%;
+  width: 70%;
 }
 
 .lake-river-list h2 {
-  margin-top: 100px;
+  margin-top: 50px;
+  margin-bottom: 0px;
   text-align: center;
   text-decoration: underline;
   width: 100%;
@@ -190,18 +227,28 @@ CSS Styling for Lakes/Rivers page */
   flex-flow: row nowrap;
   justify-content: left;
   gap: 20px;
+  margin-top: 10px;
+  margin-bottom: 30px;
+
+}
+
+#lake-1-container {
+  margin-top: 30px;
+}
+
+#lakes-list > div:not(last-of-type) {
   border-bottom: 1px solid #000;
 }
 
-.lake-river-container:last-child {
-  border-bottom: 0;
+#lakes-list > div:last-of-type {
+  border-bottom: 6px double #000;
 }
 
 .lake-river-image {
   display: flex;
   flex-direction: column;
   text-align: center;
-  padding: 10px;
+  padding: 100px 10px 10px 10px;
 }
 
 .lake-river-content {
@@ -214,7 +261,19 @@ CSS Styling for Lakes/Rivers page */
 }
 
 .lake-river-content h3 {
-  text-align: center;
+  font-size: 1.5em;
+}
+
+#river-1-container {
+  margin-top: 30px;
+}
+
+#rivers-list > div:not(last-of-type) {
+  border-bottom: 1px solid #000;
+}
+
+#rivers-list > div:last-of-type {
+  border-bottom: 6px double #000;
 }
 
 #weather-search {
@@ -244,6 +303,13 @@ CSS Styling for Lakes/Rivers page */
 .east,
 .west {
   display: none;
+}
+
+.north,
+.south,
+.east,
+.west {
+  width: 100%;
 }
 
 /* Add some padding inside the card container */
@@ -433,9 +499,10 @@ Start of styling for Fish Page */
 #fish-search-details {
   border: 1px solid #ccc;
   display: none;
-  margin: 2px;
+  margin: 2px auto;
   padding: 0 15px;
   text-align: left;
+  width: 70%;
 }
 
 #fish-data {
@@ -507,18 +574,28 @@ footer {
   flex: 1 100%;
 }
 
-@media only screen and (max-width: 1250px) {
+@media only screen and (max-width: 1350px) {
   /* For medium & small monitors: */
   .lake-river-list {
-    width: 90%;
+    width: 100%;
   }
 
   .fish-list {
     width: 90%;
   }
+
+  .lake-river-container {
+    width: 100%;
+  }
+
+  #fish-search-details {
+    border: 0;
+    padding: 0;
+    width: 100%;
+  }
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 1050px) {
   /* For tablets: */
 
   /* Disable sticky header */
@@ -540,12 +617,7 @@ footer {
     margin: 0;
   }
 
-  .lake-river-list {
-    width: 100%;
-  }
-
   .lake-river-container {
-    width: 100%;
     flex-wrap: wrap;
     justify-content: center;
   }
@@ -553,6 +625,10 @@ footer {
   .lake-river-content {
     align-items: center;
     width: 90%;
+  }
+
+  .lake-river-content h3 {
+    margin: 0;
   }
 
   .lake-river-image {
@@ -581,6 +657,11 @@ footer {
   .fish-list-wrapper {
     flex-direction: column;
     align-items: center;
+  }
+
+  .fish-search-photo {
+    height: auto;
+    width: 100%;
   }
 }
 
@@ -668,13 +749,17 @@ footer {
   }
 
   .lake-river-list img {
-    width: auto;
+    width: 100%;
     height: auto;
   }
 
   #title {
     font-size: 3em;
-    padding: 5px;
+    padding: 5px 0;
+  }
+
+  nav {
+    gap: 15px;  
   }
 
   #slideshow-wrapper {
@@ -684,4 +769,25 @@ footer {
   #slideshow-wrapper img {
     height: 150px;
   }
+
+  #fish-search-details {
+    border: 0;
+    width: 100%;
+    padding: 0;
+  }
+
+  #weather-search {
+    padding: 0;
+    text-align: center;
+  }
+
+  #weather-search h3 {
+    margin-bottom: 0;
+  }
+
+  input[type="text"] {
+    padding: 0;
+    width: 95%;
+  }
+
 }
